--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Aggiunta del service worker per la PWA -->
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('%PUBLIC_URL%/service-worker.js')
+          .then(registration => {
+            console.log('Service Worker registrato con successo:', registration);
+          })
+          .catch(error => {
+            console.error('Errore durante la registrazione del Service Worker:', error);
+          });
+      }
+    </script>
     <title>React App</title>
   </head>
   <body>
